# 2023_GROUP_7

./: .gitignore  Khemtis.txt  Khemtisuser.txt  ModelPartList_8h.html  ModelPartList_8h_source.html  ModelPart_8cpp.html  ModelPart_8h.html  ModelPart_8h_source.html  README.md  ShailjaAJ.txt  VRRenderThread_8cpp.html  VRRenderThread_8h.html  VRRenderThread_8h_source.html  a.gitignore  annotated.html  annotated_dup.js  changemodelcolor_8h.html  changemodelcolor_8h_source.html  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classModelPart-members.html  classModelPart.html  classModelPart.js  classModelPartList-members.html  classModelPartList.html  classModelPartList.js  classOptionDialog-members.html  classOptionDialog.html  classOptionDialog.js  classVRRenderThread-members.html  classVRRenderThread.html  classVRRenderThread.js  classchangeModelColor-members.html  classchangeModelColor.html  classchangeModelColor.js  classes.html  files.html  files_dup.js  functions.html  (+16 more)
docs/: CMakeLists.txt.user.a393fb3  Doxyfile  changemodelcolor.cpp  changemodelcolor.h  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_0.js  (+32 more)
vr/: CMakeLists.txt  CMakeLists.txt.user.240eec1  Doxyfile  ModelPart.cpp  ModelPart.h  ModelPartList.h  changemodelcolor.cpp  changemodelcolor.h  changemodelcolor.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.h  optiondialog.ui
vr/html/: _model_part_8cpp.html  _model_part_8h.html  _model_part_8h_source.html  _model_part_list_8h.html  _model_part_list_8h_source.html  _v_r_render_thread_8cpp.html  _v_r_render_thread_8h.html  _v_r_render_thread_8h_source.html  annotated.html  changemodelcolor_8h.html  changemodelcolor_8h_source.html  class_main_window-members.html  class_main_window.html  class_model_part-members.html  class_model_part.html  class_model_part_list-members.html  class_model_part_list.html  class_option_dialog-members.html  class_option_dialog.html  class_v_r_render_thread-members.html  class_v_r_render_thread.html  classchange_model_color-members.html  classchange_model_color.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  mainwindow_8h.html  mainwindow_8h_source.html  namespace_ui.html  namespaces.html  optiondialog_8h_source.html  struct_dialog_data-members.html  struct_dialog_data.html
vr/html/search/: all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_4.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
vr/latex/: _model_part_8cpp.tex  _model_part_8h.tex  _model_part_8h_source.tex  _model_part_list_8h.tex  _model_part_list_8h_source.tex  _v_r_render_thread_8cpp.tex  _v_r_render_thread_8h.tex  _v_r_render_thread_8h_source.tex  annotated.tex  changemodelcolor_8h.tex  changemodelcolor_8h_source.tex  class_main_window.tex  class_model_part.tex  class_model_part_list.tex  class_option_dialog.tex  class_v_r_render_thread.tex  classchange_model_color.eps  classchange_model_color.tex  files.tex  hierarchy.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  namespace_ui.tex  namespaces.tex  optiondialog_8h_source.tex  refman.tex  struct_dialog_data.tex
(+6 files in other folders)
